--- a/_toc.yml
+++ b/_toc.yml
@@ -4,7 +4,14 @@
 format: jb-book
 root: index
 chapters:
-- file: markdown
-- file: roster
-- file: day1
+- file: schedule
+- file: people
+- file: event1
+- file: event2
+- file: event3
+- file: event4
+- file: event5
+- file: course_setters
+- file: notes
+
 
