--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/config.html
 
 title: 2024 AUS MTBO Carnival and Championship
-author: Fedor + Marina Iskhakov(a)
+author: Fedor Iskhakov, Marina Iskhakova
 logo: _static/logo/logo_champ.png
 exclude_patterns            : [_build,README.md]
 
