--- a/_toc.yml
+++ b/_toc.yml
@@ -4,16 +4,16 @@
 format: jb-book
 root: index
 chapters:
-- file: schedule
-- file: people
-- file: equipment
-- file: computers
+- file: 01.schedule
+- file: 02.people
+- file: 03.equipment
+- file: 04.computers`
 - file: event1
 - file: event2
 - file: event3
 - file: event4
 - file: event5
-- file: course_setters
-- file: notes
+- file: 09.course_setting
+- file: 99.footnotes
 
 
