--- a/_toc.yml
+++ b/_toc.yml
@@ -7,7 +7,7 @@ chapters:
 - file: 01.schedule
 - file: 02.people
 - file: 03.equipment
-- file: 04.computers`
+- file: 04.computers
 - file: event1
 - file: event2
 - file: event3
