--- a/_toc.yml
+++ b/_toc.yml
@@ -14,6 +14,7 @@ chapters:
 - file: event4
 - file: event_dinner
 - file: event5
+- file: 08.risk_management
 - file: 09.course_setting
 - file: 99.footnotes
 
