--- a/_toc.yml
+++ b/_toc.yml
@@ -10,6 +10,7 @@ chapters:
 - file: 03.equipment
 - file: 04.computers
 - file: 05.start
+- file: 06.bibs
 - file: event1
 - file: event2
 - file: event3
