--- a/_toc.yml
+++ b/_toc.yml
@@ -9,6 +9,7 @@ chapters:
 - file: 02.faces
 - file: 03.equipment
 - file: 04.computers
+- file: 04.mesho
 - file: 05.start
 - file: 06.bibs
 - file: event1
